# ccwc

./: .editorconfig  .gitattributes  .gitignore  LICENSE  Makefile  README.md  environment.yaml  pyproject.toml  setup_template.py  tox.ini  tox.toml
.devcontainer/: .dockerignore  devcontainer.json
.github/: codespace.yaml
docs/: README.md  overview.rst  workflow.md
docs/source/: index.rst
src/: ccwc.py  main.py  tox.ini
tests/: conftest.py  environment.py  test_ccwc.py  test_main.py
