[build-system]
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "coding_challenge_word_count"
version = "0.1.0"
authors = [
    {name = "reuben haug", email = "reuben.haug@gmail.com"},
]
description = "returns the word, line, character, and byte count for a given .txt file."
readme = "docs/README.md"
requires-python = ">=3.12"

dependencies = [
    "pip-tools==7.4.1"
]
[project.optional-dependencies]
dev = [
    # Development tools to work on this project
    "sphinx==7.0.1",
    "sphinxcontrib-plantuml==0.25",
]
test = [
    # Testing tools to test this project
    "pytest==7.2.0",
    "pytest-cov==4.1.0",
    "tox==4.0.8",
    "behave==1.2.6",
    "black==23.10.1",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
